--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
               </ul>
             </div>    
       </div>
-    </div>
+    </div> <script src="./index.js"></script>
 </body>
 </html>
